<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/event_details_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        app:cardBackgroundColor="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_5sdp">

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtube_player_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:autoPlay="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--  Overlay view has to be above the YouTubePlayerView in order to intercept clicks-->
            <View
                android:id="@+id/overlay_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintBottom_toBottomOf="@id/youtube_player_view"
                app:layout_constraintEnd_toEndOf="@id/youtube_player_view"
                app:layout_constraintStart_toStartOf="@id/youtube_player_view"
                app:layout_constraintTop_toTopOf="@id/youtube_player_view" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/service_image"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/white"
                android:contentDescription="@string/thumbnails"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/youtube_player_view"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

            <TextView
                android:id="@+id/description_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_proin_placerat_mi_eget_magna_volutpat_convallis_vivamus_justo_leo_accumsan_ac_vulputate_vitae_gravida_quis_mauris"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@+id/service_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/service_image"
                app:layout_constraintTop_toTopOf="@+id/service_image"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/channel_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:ellipsize="end"
                android:text="@string/channel_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/service_image"
                app:layout_constraintTop_toBottomOf="@+id/description_text" />

            <TextView
                android:id="@+id/published_at_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@string/publishedat"
                app:layout_constraintBottom_toBottomOf="@+id/channel_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.08"
                app:layout_constraintStart_toEndOf="@+id/channel_name"
                app:layout_constraintTop_toTopOf="@+id/channel_name" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>